leftover dev bits

--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
+<center>
+  <h1>CHAIN SWORD</h1>
+  <h2>by @noffle</h2>
+</center>
 <script src="phaser.js"></script>
 <script src="game.js"></script>
 <style type="text/css">
+h1 {
+  font-size: 8em;
+  margin-bottom: -40px;
+}
+h2 {
+  margin-bottom: -90px;
+}
 body {
+  color: #ffffff;
   margin: 0;
+  margin-top: 5px;
   padding: 0;
   background-color: #000000;
 }
