html tweaks for mirroring on 1920x1020 screen

--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
 <script src="game.js"></script>
 <style type="text/css">
 h1 {
-  font-size: 8em;
-  margin-bottom: -40px;
+  font-size: 4em;
+  margin-top: -40px;
+  margin-bottom: 0px;
 }
 h2 {
-  margin-bottom: -90px;
+  margin-top: -10px;
+  margin-bottom: -55px;
+  color: grey;
 }
 body {
   color: #ffffff;
   margin: 0;
-  margin-top: 5px;
+  margin-top: 50px;
   padding: 0;
   background-color: #000000;
 }
